First-time Commit